[tool.poetry]
name = "mrfmsim-yaml"
version = "0.1.0"
description = "Define MRFM experiments using yaml configuration files."
authors = ["Peter Sun <hs859@cornell.edu>"]
maintainers = ["Peter Sun <hs859@cornell.edu>"]
repository = "https://www.github.edu/Marohn-Group/mrfmsim-yaml"
readme = "README.rst"
packages = [
    { include = "mrfmsim_yaml/*.py" }
]

[tool.poetry.dependencies]
python = ">=3.10"
mrfmsim = { git = "https://github.com/marohn-group/mrfmsim", branch="feature" }
pyyaml = ">=6.0.2"
pytest = { version = ">=7.1.1", optional = true }
pytest-cov = { version = ">=3.0.0", optional = true }
pytest-mock = { version = ">=3.12.0", optional = true }

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.1"
pytest-cov = ">=3.0.0"
pytest-mock = ">=3.12.0"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::DeprecationWarning',
]

[tool.coverage.run]
# pytest coverage
source_pkgs = [
    'mrfmsim_yaml',
]
omit = ['tests/*']

[tool.tox]
# for testing different python environments
legacy_tox_ini = """
[tox]
envlist = py310, py311, py312, coverage
isolated_build = True
 
[testenv:py310]
deps = 
    pytest >= 7.1.1
    pytest-mock >= 3.12.0
commands = 
    pytest

[testenv:py311]
deps = 
    pytest >= 7.1.1
    pytest-mock >= 3.12.0
commands = 
    pytest

[testenv:py312]
deps = 
    pytest >= 7.1.1
    pytest-mock >= 3.12.0
commands = 
    pytest

[testenv:coverage]
deps = 
    pytest >= 7.1.1
    pytest-mock >= 3.12.0
    pytest-cov >= 3.0.0
commands =
    coverage run --source=tests -m pytest
    coverage html
    coverage report

[gh-actions]
python =
    3.10: py310, coverage
    3.11: py311, coverage
    3.12: py311, coverage
"""
